<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="warrenhong.scrollview.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"></ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <Button
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/one"
        android:alpha="0.5"
        android:textSize="30dp"
        android:text="@string/new_york_city"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/one"
        android:textColor="@android:color/widget_edittext_dark"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/two"
        android:alpha="0.5"
        android:textSize="30dp"
        android:text="@string/tpe"
        android:layout_below="@+id/one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageButton"
        android:layout_alignEnd="@+id/imageButton"
        android:background="@drawable/tpe"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/three"
        android:alpha="0.5"
        android:text="@string/paris"
        android:layout_below="@+id/two"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageButton2"
        android:layout_alignEnd="@+id/imageButton2"
        android:background="@drawable/paris"
        android:textColorHighlight="@android:color/widget_edittext_dark"
        android:textStyle="normal|bold"
        android:layout_margin="2dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/four"
        android:alpha="0.5"
        android:text="@string/london"
        android:layout_below="@+id/three"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/london"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/five"
        android:alpha="0.5"
        android:text="@string/los_angeles"
        android:textSize="30dp"
        android:layout_below="@+id/four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/la"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/six"
        android:alpha="0.5"
        android:text="@string/san_francisco"
        android:background="@drawable/sf"
        android:layout_below="@+id/five"
        android:textSize="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_margin="2dp"/>

    </LinearLayout>

</RelativeLayout>
